just using title case for title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "incubator"
 
 # Overall title for pages.
-title: "Learn Deep learning with Python"
+title: "Learn Deep Learning with Python"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
