using jekyll-diagrams to render/create graphviz plots directly

--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,7 @@ highlighter: rouge
 
 # Remote theme
 remote_theme: carpentries/carpentries-theme
+
+# jekyll plugins
+plugins:
+  - jekyll-diagrams
