adding svg for local testing

--- a/_extras/Makefile
+++ b/_extras/Makefile
@@ -1,7 +1,11 @@
 DOTFILES=$(wildcard *dot)
 PNGFILES=$(DOTFILES:.dot=.png)
+SVGFILES=$(DOTFILES:.dot=.svg)
 
-all : $(PNGFILES)
+all : $(PNGFILES) $(SVGFILES)
 
 %.png : %.dot
 	@dot -Tpng -o$@ $^
+
+%.svg : %.dot
+	@dot -Tsvg -o$@ $^
