--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -16,6 +16,10 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: prep image 
+        run: |
+          apt install graphviz
+
       - name: Set up Ruby
         uses: actions/setup-ruby@v1
         with:
