--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+---
 #------------------------------------------------------------
 # Values for this lesson.
 #------------------------------------------------------------
@@ -10,7 +11,7 @@
 carpentry: "incubator"
 
 # Overall title for pages.
-title: "Introduction to deep-learning" # FIXME
+title: "Introduction to deep-learning"
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
@@ -30,7 +31,7 @@ kind: "lesson"
 repository: <USERNAME>/<PROJECT>
 
 # Email address, no mailto:
-email: "team@carpentries.org" # FIXME
+email: "d.vankuppevelt@esciencecenter.nl"
 
 # Sites.
 amy_site: "https://amy.carpentries.org/"
@@ -55,7 +56,6 @@ pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
 post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
 instructor_pre_survey: "https://www.surveymonkey.com/r/instructor_training_pre_survey?workshop_id="
 instructor_post_survey: "https://www.surveymonkey.com/r/instructor_training_post_survey?workshop_id="
-
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
 start_time: 0
@@ -98,7 +98,6 @@ exclude:
 
 # Turn on built-in syntax highlighting.
 highlighter: rouge
-
 
 # Remote theme
 remote_theme: carpentries/carpentries-theme
