Trying to run using bash script

--- a/.github/workflows/inline-code.yml
+++ b/.github/workflows/inline-code.yml
@@ -28,6 +28,9 @@ jobs:
         run: |
           python3 -m pip install --upgrade git+https://github.com/bpmweel/cce.git#egg=cce
 
+      - name: Checkout the lesson
+        uses: actions/checkout@v2
+
       - name: Run code checkeer
         run: |
           echo $PWD
