--- a/.github/workflows/inline-code.yml
+++ b/.github/workflows/inline-code.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Download prerequisite files
         run: |
-          wget https://zenodo.org/record/4980359/files/weather_prediction_dataset.csv?download=1
-          wget https://zenodo.org/record/4980359/files/weather_prediction_bbq_labels.csv?download=1
+          wget -O weather_prediction_dataset.csv https://zenodo.org/record/4980359/files/weather_prediction_dataset.csv?download=1
+          wget -O weather_prediction_bbq_labels.csv https://zenodo.org/record/4980359/files/weather_prediction_bbq_labels.csv?download=1
 
       - name: Run code checker
         run: |
