installing pytest for the code checker

--- a/.github/workflows/inline-code.yml
+++ b/.github/workflows/inline-code.yml
@@ -23,12 +23,13 @@ jobs:
 
       - name: Install Python modules
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel pyyaml==5.3.1 requests tensorflow seaborn scikit-learn pandas
+          python3 -m pip install --upgrade pip setuptools wheel pyyaml==5.3.1 requests tensorflow seaborn scikit-learn pandas 
 
       - name: Install Code Checker
         run: |
           #python3 -m pip install --upgrade git+https://github.com/bpmweel/cce.git#egg=cce
           #fix to code checker which works on calls to imports inside functions
+          python3 -m pip install --upgrade pytest
           wget -O /usr/local/bin/cce https://raw.githubusercontent.com/colinsauze/cce/master/cce/main.py 
           chmod 755 /usr/local/bin/cce
 
