trying to cause failures to trigger an error

--- a/.github/workflows/inline-code.yml
+++ b/.github/workflows/inline-code.yml
@@ -51,5 +51,6 @@ jobs:
           do
             echo "Checking $f"
             cce -f "$f"
+            if [ "$?" != "0" ] ; then exit 1 ; fi
           done
         shell: bash {0} # opt out of fail-fast
